[gd_scene load_steps=4 format=3 uid="uid://bhny78wtly50e"]

[ext_resource type="Script" path="res://bullet.gd" id="1_nuk1r"]
[ext_resource type="Texture2D" uid="uid://csrie707icale" path="res://Assets/gamejam_cheese_png.png" id="2_0w87s"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yw5be"]
radius = 64.2806

[node name="Bullet" type="Node2D"]
script = ExtResource("1_nuk1r")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_0w87s")

[node name="KillTimer" type="Timer" parent="."]
wait_time = 4.0

[node name="BulletDealDamage" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletDealDamage"]
shape = SubResource("CircleShape2D_yw5be")

[connection signal="timeout" from="KillTimer" to="." method="_on_kill_timer_timeout"]
[connection signal="area_entered" from="BulletDealDamage" to="." method="_on_bullet_deal_damage_area_entered"]
